--- a/pink.html
+++ b/pink.html
@@ -4,7 +4,7 @@
 <title>Career Paths</title>
 <style>
 body {
-    background-image: url("C:/Users/Mahi9/OneDrive/Desktop/Mahi/imh.jpg");
+    background-image: url("imh.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
