--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </video>
         </div>
         <div class="toplogos">
-            <div class="top"> <a htef=""><img src="carrer_pathways.jpg" style="height: 150px ; width: 150px; margin-right: 15px; border:5px solid black; "></a></div>
+            <div class="top"> <a href="pink.html"><img src="carrer_pathways.jpg" style="height: 150px ; width: 150px; margin-right: 15px; border:5px solid black; "></a></div>
             <div class="top"><a href="gctafs.html" ><img src="call_action_for_students.jpg" style="height: 150px ; width: 150px; margin-left: 15px; border:5px solid black; "></a></div>
         </div>
         <div class="centerportion"> 
