--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </div>
         <div class="centerportion"> 
         <div>
-        <div><img src="emphasize_practical_knowledge.jpg" style="height: 150px ; width: 150px; margin-bottom: 15px; border:5px solid black; "> </div>
+        <div> <a href="rrrr.html"><img src="emphasize_practical_knowledge.jpg" style="height: 150px ; width: 150px; margin-bottom: 15px; border:5px solid black; "> </div>
         <div> <img src="inclusive_design.jpg" style="height: 150px ; width: 150px; margin-top: 15px; border:5px solid black; "></div>
         </div>
         <div class="center"> <img src="weblogo1.jpg" style="height: 350px ; width: 350px; margin:5px; border:5px solid black; "></div>
