--- a/rrrr.html
+++ b/rrrr.html
@@ -106,6 +106,14 @@ li {
             <li>Recommendation System</li>
             <li>Image Classification</li>
             <li>Participate in Kaggle Competitions</li>
+            <li>Fine-tune a Pretrained Model</li>
+            <li>AI Research Paper Reading & Implementation</li>
+            <li>Reinforcement Learning </li>
+            <li>Edge AI & TinyML</li>
+            <li>Multi-Modal AI</li>
+            <li>Explainability & Bias in AI</li>
+            <li>Model Optimization</li>
+            <li>Deploy ML Models</li>
         </ul>
     </div>
 </div>
@@ -117,6 +125,12 @@ li {
             <li>Robotic Arm with Arduino/Raspberry Pi</li>
             <li>Swarm Robotics</li>
             <li>Self-Driving Car Simulation</li>
+            <li>ROS (Robot Operating System)</li>
+            <li>Simulating Robots in Gazebo</li>
+            <li>SLAM (Simultaneous Localization and Mapping)</li>
+            <li>Computer Vision in Robotics</li>
+            <li>Gesture & Voice-Controlled Robots</li>
+            <li>Edge AI in Robotics</li>
         </ul>
     </div>
     <div class="image-container">
@@ -134,6 +148,13 @@ li {
             <li>Open-Source Contributions</li>
             <li>Full-Stack Web App</li>
             <li>Mobile App Development</li>
+            <li>System Design & Architecture</li>
+            <li>Backend Development & APIs</li>
+            <li>DevOps & CI/CD</li>
+            <li>Design Patterns & Clean Code</li>
+            <li>Game Development</li>
+            <li>Performance Optimization</li>
+
         </ul>
     </div>
 </div>
@@ -145,6 +166,12 @@ li {
             <li>Honeypot Setup</li>
             <li>Secure Login System</li>
             <li>Vulnerability Assessment</li>
+            <li>CTF Challenges</li>
+            <li>Reverse Engineering & Malware Analysis</li>
+            <li>Web Application Security</li>
+            <li>Cryptography & Encryption</li>
+            <li>Cloud Security</li>
+            <li>SIEM & Log Analysis </li>
         </ul>
     </div>
     <div class="image-container">
@@ -162,6 +189,12 @@ li {
             <li>Portfolio Website</li>
             <li>Create an Online Course</li>
             <li>AI Consulting for Startups</li>
+            <li>Technical Writing & Blogging</li>
+            <li>Consulting in Quantum Computing</li>
+            <li>Freelance AI/ML Projects</li>
+            <li>Create & Sell E-Bookse</li>
+            <li>Build No-Code AI Solutions</li>
+
         </ul>
     </div>
 </div>
