--- a/PIndex2.html
+++ b/PIndex2.html
@@ -38,15 +38,29 @@
     <div>
         <img src="roadmap.jpg" align="center" class="roadmap" >
         <div>
-        <button  class="button1" onclick="window.location.href='PSubindex2_1.html';">AI/Machine Learning</button>
-        <button onclick="window.location.href='PSubindex2_2.html';" class="button2">cybersecurity</button>
+          
+        <a href="PSubindex2_1.html">
+    <button class="button1">AI/Machine Learning</button>
+</a>
+            <a href="PSubindex2_2.html">
+    <button class="button1">CyberSecurity</button>
+</a>
+
         </div>
         <div>
-            <button onclick="window.location.href='PSubindex2_3.html';" style="margin-left:175px; margin-top: 210px; background-color: skyblue; padding: 5px; border-radius: 20px;">Data Analyst</button>
-            <button onclick="window.location.href='PSubindex2_4.html';" style="margin-left:750px ; margin-top: 210px; background-color: red; padding: 5px; border-radius: 20px;">Freelancing</button>
+
+            <a href="PSubindex2_3.html">
+    <button class="button1">CyberSecurity</button>
+</a>
+
+            <a href="PSubindex2_4.html">
+    <button class="button1">CyberSecurity</button>
+</a>
         </div>
         <div> 
-            <button  onclick="window.location.href='PSubindex2_5.html';" style="margin-top: 53px; margin-left: 580px;  background-color: gray; padding: 5px; border-radius: 20px;">App development</button>
+            <a href="PSubindex2_5.html">
+    <button class="button1">CyberSecurity</button>
+</a>
     </div>
 
 </body>
