--- a/PIndex2.html
+++ b/PIndex2.html
@@ -35,33 +35,20 @@
     <p style="margin: 15px"><b>A roadmap is crucial because it acts as a visual representation of a project's goals, timeline, and milestones, ensuring everyone involved understands the overall vision, priorities, and steps
          needed to reach the desired outcome, facilitating clear communication, alignment among stakeholders, and effective project execution by identifying potential risks and dependencies early on while allowing for
           flexibility to adapt to changing circumstances; essentially, it provides a structured plan to guide the team towards achieving their objectives.</b></p>
-    <div>
+  <div>
         <img src="roadmap.jpg" align="center" class="roadmap" >
         <div>
-          
-        <a href="PSubindex2_1.html">
-    <button class="button1">AI/Machine Learning</button>
-</a>
-            <a href="PSubindex2_2.html">
-    <button class="button1">CyberSecurity</button>
-</a>
-
+        <button  class="button1" onclick="window.location.href='PSubindex2_1.html';">AI/Machine Learning</button>
+        <button onclick="window.location.href='PSubindex2_2.html';" class="button2">cybersecurity</button>
         </div>
         <div>
-
-            <a href="PSubindex2_3.html">
-    <button class="button1">CyberSecurity</button>
-</a>
-
-            <a href="PSubindex2_4.html">
-    <button class="button1">CyberSecurity</button>
-</a>
+            <button onclick="window.location.href='PSubindex2_3.html';" style="margin-left:175px; margin-top: 210px; background-color: skyblue; padding: 5px; border-radius: 20px;">Data Analyst</button>
+            <button onclick="window.location.href='PSubindex2_4.html';" style="margin-left:750px ; margin-top: 210px; background-color: red; padding: 5px; border-radius: 20px;">Freelancing</button>
         </div>
         <div> 
-            <a href="PSubindex2_5.html">
-    <button class="button1">CyberSecurity</button>
-</a>
+            <button  onclick="window.location.href='PSubindex2_5.html';" style="margin-top: 53px; margin-left: 580px;  background-color: gray; padding: 5px; border-radius: 20px;">App development</button>
     </div>
+
 
 </body>
 </html>     
