--- a/PIndex2.html
+++ b/PIndex2.html
@@ -42,7 +42,7 @@
     <button class="button1">AI/Machine Learning</button>
 </a>
 <a href="PSubindex2_1.html">
-    <button class="button1">AI/Machine Learning</button>
+    <button class="button1">Cybersecurity</button>
 </a>
         </div>
         <div>
