--- a/PIndex2.html
+++ b/PIndex2.html
@@ -38,10 +38,10 @@
   <div>
         <img src="roadmap.jpg" align="center" class="roadmap" >
         <div>
-            <a href="PSubindex2_1.html">
+            <a href="PSubIndex2_1.html">
     <button class="button1">AI/Machine Learning</button>
 </a>
-<a href="PSubindex2_1.html">
+<a href="PSubIndex2_2.html">
     <button class="button2">Cybersecurity</button>
 </a>
         </div>
