--- a/PIndex2.html
+++ b/PIndex2.html
@@ -48,16 +48,16 @@
         <div>
             <a href="PSubindex2_3.html">
     
-            <button onclick="window.location.href='PSubindex2_3.html';" style="margin-left:175px; margin-top: 210px; background-color: skyblue; padding: 5px; border-radius: 20px;">Data Analyst</button>
+            <button  style="margin-left:175px; margin-top: 210px; background-color: skyblue; padding: 5px; border-radius: 20px;">Data Analyst</button>
         </a>
             <a href="PSubindex2_4.html">
 
-            <button onclick="window.location.href='PSubindex2_4.html';" style="margin-left:750px ; margin-top: 210px; background-color: red; padding: 5px; border-radius: 20px;">Freelancing</button>
+            <button  style="margin-left:750px ; margin-top: 210px; background-color: red; padding: 5px; border-radius: 20px;">Freelancing</button>
             </a>
         </div>
         <div> 
             <a href="PSubindex2_5.html">
-            <button  onclick="window.location.href='PSubindex2_5.html';" style="margin-top: 53px; margin-left: 580px;  background-color: gray; padding: 5px; border-radius: 20px;">App development</button>
+            <button style="margin-top: 53px; margin-left: 580px;  background-color: gray; padding: 5px; border-radius: 20px;">App development</button>
             </a>
     </div>
   </div>
