--- a/PIndex2.html
+++ b/PIndex2.html
@@ -46,7 +46,7 @@
 </a>
         </div>
         <div>
-            <a href="PSubindex2_3.html">
+            <a href="PSubIndex2_3.html">
     
             <button  style="margin-left:175px; margin-top: 210px; background-color: skyblue; padding: 5px; border-radius: 20px;">Data Analyst</button>
         </a>
