--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
           *{
             margin: 0;
             }
-            header{
-            }
             .toplogos{
                 display: flex;
                 justify-content: center;
@@ -80,6 +78,7 @@
             min-height:20vh;
             color:#fff;
             position:relative;
+    }
         .container{
             width:450px;
             height:100px;
@@ -121,6 +120,13 @@
          #sec::after{
             content:'SECONDS';
          }
+         .footer{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            padding: 20px;
+
+         }
   </style>
     </head>
     <body style="background: linear-gradient(45deg,#08001f,#30197d);"class="body">
@@ -140,12 +146,12 @@
             </video>
         </div>
         <div class="toplogos">
-            <div class="top"> <a htef=""><img src="carrer_pathways.jpg" style="height: 150px ; width: 150px; margin-right: 15px; border:5px solid black; "></a></div>
+            <div class="top"> <a href="Mcp.html"><img src="carrer_pathways.jpg" style="height: 150px ; width: 150px; margin-right: 15px; border:5px solid black; "></a></div>
             <div class="top"><a href="gctafs.html" ><img src="call_action_for_students.jpg" style="height: 150px ; width: 150px; margin-left: 15px; border:5px solid black; "></a></div>
         </div>
         <div class="centerportion"> 
         <div>
-        <div><img src="emphasize_practical_knowledge.jpg" style="height: 150px ; width: 150px; margin-bottom: 15px; border:5px solid black; "> </div>
+        <div><a href="Mpk.html"><img src="emphasize_practical_knowledge.jpg" style="height: 150px ; width: 150px; margin-bottom: 15px; border:5px solid black; "></a></div>
         <div> <img src="inclusive_design.jpg" style="height: 150px ; width: 150px; margin-top: 15px; border:5px solid black; "></div>
         </div>
         <div class="center"><a href="Transformative_Quadrannial.html"><img src="weblogo1.jpg" style="height: 350px ; width: 350px; margin:5px; border:5px solid black; "></a></div>
@@ -257,4 +263,47 @@
     <img src="quoto5.jpg" style="height: 100px; width:600px">
     </div>
 </body>
+<footer>
+    <div class="footer">
+    <div>
+        <img src="edu" style="width: 350px; height: 350px;">
+    </div>
+    <div style="color: white;text-align: center; padding: 20px; font-size: 15px;" >
+        <p> "The expert in anything was once a beginner." <br> – Helen Hayes</p><br>
+        <p>"It’s not that I’m so smart, it’s just that I stay with problems longer."<br> – Albert Einstein</p><br>
+        <p>"Success in engineering starts with curiosity and the courage to learn something new every day."</p><br>
+        <p>"Don’t be afraid to fail. Be afraid not to try. Your engineering journey is just beginning."</p><br>
+        <p>"Your degree is just a piece of paper; your knowledge and skills will open doors."</p><br>
+        <p>"Engineering is not about perfect solutions. It’s about doing the best you can with limited resources."<br> – Randy Pausch</p><br>
+        <p>"Success in engineering starts with curiosity and the courage to learn something new every day."</p>
+    </div>
+    <div  style="color: white;">
+        <p>✉️ Email: Transformativequadrenial@gmail.com</p><br>
+        <br>
+        <h3> Need carrer Counclling ? </h3>
+        <p>Contact </p>
+        <br>
+        <p> YASHASWINI </p>
+        <p>📞 Phone: +91 9063502532</p>
+        <br>
+        <p> PRANAV </p>
+        <p>📞 Phone: +91 7587060360</p>
+        <br>
+        <P> MANASWANI</P>
+        <p>📞 Phone: +91 6281044095</p>
+        <br>
+        <p> MANIDEEP </p>
+        <p>📞 Phone: +91 9848181098</p>
+    </div>
+    </div>
+    <div style="display: flex; justify-content: space-between; margin-left: 50px; margin-right: 50px;">
+        <a href="PSubIndex2_1.html" style="color: white;" > Artificial intelligence</a>
+        <a href="PSubIndex2_2.html" style="color: white;" > Cybersecurity</a>
+        <a href="PSubIndex2_3.html" style="color: white;" > Data Analyst</a>
+        <a href="PSubIndex2_4.html" style="color: white;" > Freelancing</a>
+        <a href="PSubIndex2_5.html" style="color: white;" > Application Development</a>
+        <a href="PSubIndex2_6.html" style="color: white;" > Software Development</a>
+    </div>
+    <div align="center" style="color: white; padding: 10px; margin-bottom: 10px; font-size: 15px; margin-top: 20px;" > <p>©Transformative Quadranial  2025. All rights reserved.</p></div>
+</footer>
 </html>
