--- a/PSubIndex2_4.html
+++ b/PSubIndex2_4.html
@@ -9,11 +9,32 @@
         margin: 0;
         padding: 0;
       }
+      .buttonsbody{
+            display: flex;
+            flex-direction: row;
+            padding: 15px;
+            background-color:rgb(255, 134, 134);
+            justify-content: center;
+        }
+        .button{
+            padding:5px;
+            margin-left: 5px;
+            margin-right: 5px;
+        }
     </style>
   </head>
-  <body style="background-color: #C9E4CA;">
-    <h1 align="center" style="background-color: #8F9491;">4 Year Rodamap For Freelancing</h1>
-    <p>
+  <body style="background-color: #cb5d5d;">
+    <h1 align="center" style="background-color: #ef2121; padding: 10px; color: white;">4 Year Rodamap For Freelancing</h1>
+    <div class="buttonsbody">
+      <a href="index.html"><button class="button"  style="background-color: rgb(255, 1, 1); color:white; border-radius:10px;">Home</button></a>
+      <a href="PIndex2.html"><button class="button"  style="background-color: rgb(255, 1, 1); color:white; border-radius:10px;">Roadmap</button></a>
+      <a href="PSubIndex2_1.html"><button class="button" style="background-color:rgb(255, 1, 1); color:white; border-radius:10px;">AI/ML</button></a>
+      <a href="PSubIndex2_2.html"><button class="button" style="background-color: rgb(255, 1, 1);color:white; border-radius:10px;">Cybersecurity</button></a>
+      <a href="PSubIndex2_5.html"><button class="button" style="background-color: rgb(255, 1, 1); color:white; border-radius:10px;">App Development</button></a>
+      <a href="PSubIndex2_3.html"><button class="button" style="background-color:rgb(255, 1, 1); color:white; border-radius:10px;">Data Analyst</button></a>
+      <a href="PSubIndex2_6.html"><button class="button" style="background-color:rgb(255, 1, 1);color:white; border-radius:10px;">Software Development</button></a>
+  </div>
+    <p style="margin: 5px; border: 2px solid black; color: white;">
       A 4-year freelance roadmap could involve: Year 1 - Establishing your
       foundation by identifying your niche, building your online presence, and
       securing initial clients on freelance platforms; Year 2 - Focusing on
@@ -26,87 +47,90 @@
       high-quality work, client satisfaction, and continuous learning to stay
       competitive in your chosen field
     </p>
+    <div style="margin: 5px; border: 2px dashed black; background-color: #f84f4f; color: white;">
     <h2>Year 1: Building the Basics</h2>
-    <ol>
-      <li>
+      <p>
         Identify your niche: Choose a specific skillset or area of expertise
         where you can stand out in the freelance market.
-      </li>
-      <li>
+      </p>
+      <p>
         Develop your online presence: Create a professional website showcasing
         your work, optimize your LinkedIn profile, and establish an active
         presence on relevant social media platforms.
-      </li>
-      <li>
+      </p>
+      <p>
         Learn essential freelance skills: Gain proficiency in project
         management, communication, client acquisition, and proposal writing.
-      </li>
-      <li>
+      </p>
+      <p>
         Join freelance platforms: Sign up on platforms like Upwork, Fiverr, or
         Freelancer to find your first clients.
-      </li>
-      <li>
+      </p>
+      <p>
         Build a portfolio: Gather initial projects, even if they are smaller, to
         demonstrate your capabilities to potential clients.
-      </li>
-    </ol>
+      </p>
+    </div>
+    <div style="margin: 5px; border: 2px dashed black; color: white;">
     <h2>Year 2: Growth and Expansion</h2>
-    <ol>
-      <li>
+  
+      <p>
         Refine your skillset: Invest in further education through online
         courses, workshops, or certifications to enhance your expertise.
-      </li>
-      <li>
+      </p>
+      <p>
         Network strategically: Connect with industry professionals on LinkedIn,
         attend relevant events, and build relationships with potential clients.
-      </li>
-      <li>
+      </p>
+      <p>
         Develop marketing strategies: Utilize email marketing, content creation,
         and social media to attract new clients and promote your services.
-      </li>
-      <li>
+      </p>
+      <p>
         Optimize pricing structure: Research industry standards and adjust your
         rates to reflect your growing expertise and value.
-      </li>
-      <li>
+      </p>
+      <p>
         Establish a workflow: Implement systems for managing projects, tracking
         time, and communicating effectively with clients.
-      </li>
-    </ol>
+      </p>
+    </div>
+    <div style="margin: 5px; border: 2px dashed black; background-color: #f84f4f; color: white;">
     <h2>Year 3: Diversification and Scaling</h2>
-    <ol>
-      <li>
+  
+      <p>
         Explore new income streams: Consider offering additional services
         related to your niche, like consultations, workshops, or recurring
         retainer contracts.
-      </li>
-      <li>
+      </p>
+      <p>
         Build a small team: If needed, recruit virtual assistants or
         collaborators to support project delivery.
-      </li>
-      <li>
+      </p>
+      <p>
         Target higher-value clients: Focus on attracting larger projects with
         higher budgets and more complex requirements.
-      </li>
-      <li>
+      </p>
+      <p>
         Brand building: Develop a strong personal brand identity to further
         differentiate yourself in the market.
-      </li>
-      <li>
+      </p>
+      <p>
         Stay updated with trends: Continuously monitor industry developments and
         adapt your skillset accordingly.
-      </li>
-    </ol>
+      </p>
+    </div>
+    <div style="margin: 5px; border: 2px dashed black; color: white;">
     <h2>Year 4: Expertise and Business Development</h2>
-    <ol>
-      <li>Establish yourself as an expert:
-        Become a thought leader in your niche by publishing content, speaking at events, or offering mentorship</li>
-        <li>Refine your business model:
-          Explore options like creating your own online course, developing a subscription service, or transitioning to a more structured business entity. </li>
-          <li>Nurture long-term client relationships:
-            Focus on client retention and building strong partnerships for repeat business and referrals. </li>
-            <li>Give back to the community:
-              Contribute to open-source projects, participate in online forums, or mentor other freelancers. </li>
-    </ol>
+  
+      <p>Establish yourself as an expert:
+        Become a thought leader in your niche by publishing content, speaking at events, or offering mentorship</p>
+        <p>Refine your business model:
+          Explore options like creating your own online course, developing a subscription service, or transitioning to a more structured business entity. </p>
+          <p>Nurture long-term client relationships:
+            Focus on client retention and building strong partnerships for repeat business and referrals. </p>
+            <p>Give back to the community:
+              Contribute to open-source projects, participate in online forums, or mentor other freelancers. </p>
+  </div>
   </body>
 </html>
