--- a/PSubIndex2_5.html
+++ b/PSubIndex2_5.html
@@ -10,11 +10,32 @@
         padding: 0;
 
       }
+      .buttonsbody{
+    display: flex;
+    flex-direction: row;
+    padding: 15px;
+    background-color:#C19A6B;
+    justify-content: center;
+}
+.button{
+  padding:5px;
+  margin-left: 5px;
+  margin-right: 5px;
+        }
     </style>
   </head>
-  <body style="background-color: #C9E4CA;">
-    <h1 align="center" style="background-color: #8F9491;">4 Year Roadmap For App Development</h1>
-    <p>
+  <body style="background-color:#B87333">
+    <h1 align="center" style="background-color: #6F4E37; padding:5px ; color:white">4 Year Roadmap For App Development</h1>
+    <div class="buttonsbody">
+      <a href="index.html"><button class="button"  style="background-color: #6F4E37; color:white; border-radius:10px;">Home</button></a>
+      <a href="PIndex2.html"><button class="button"  style="background-color: #6F4E37; color:white; border-radius:10px;">Roadmap</button></a>
+      <a href="PSubIndex2_1.html"><button class="button" style="background-color:#6F4E37; color:white; border-radius:10px;">AI/ML</button></a>
+      <a href="PSubIndex2_2.html"><button class="button" style="background-color: #6F4E37;color:white; border-radius:10px;">Cybersecurity</button></a>
+      <a href="PSubIndex2_3.html"><button class="button" style="background-color: #6F4E37; color:white; border-radius:10px;">Data Analyst</button></a>
+      <a href="PSubIndex2_4.html"><button class="button" style="background-color:#6F4E37; color:white; border-radius:10px;">Freelancing</button></a>
+      <a href="PSubIndex2_6.html"><button class="button" style="background-color:#6F4E37;color:white; border-radius:10px;">Software Development</button></a>
+  </div>
+  <p style="margin: 10px; text-align: center; border: 2px solid black; color: white;">
       A 4-year app development roadmap could look like this: Year 1:
       Foundational Learning and MVP Development - Focus on learning core
       programming languages, design principles, and building a Minimum Viable
@@ -27,83 +48,64 @@
       on marketing and user acquisition, maintain updates with new features and
       bug fixes, and adapt to emerging technologies
     </p>
+    <div style="margin: 10px; border: 2px dashed black;background-color: #6F4E37; color:black;  color: white;">
     <h2>Year 1: Fundamentals and MVP</h2>
-    <ol>
-      <li>
         Learn essential programming languages: Depending on your platform (iOS,
         Android, Web), learn languages like Swift/Objective-C, Java/Kotlin, or
         JavaScript/React Native.
-      </li>
-      <li>
         Master UI/UX design principles: Understand user interface design best
         practices to create intuitive and user-friendly experiences.
-      </li>
-      <li>
         Build a basic MVP: Develop a simplified version of your app with core
         functionalities to test market viability and gather initial feedback.
-      </li>
-      <li>
         Data storage and backend development: Choose a suitable database (e.g.,
         Firebase, MongoDB) and set up a basic backend infrastructure to manage
         data
-      </li>
-      <li>
         Testing and quality assurance: Implement unit and integration testing to
         ensure app stability.
-      </li>
-    </ol>
+        </div>
+        <div style="margin: 10px; border: 2px dashed black; color: white;">
     <h2>Year 2: Feature Expansion and User Feedback</h2>
-    <ol>
-      <li>
         Gather user feedback: Actively collect feedback through surveys,
         analytics, and user reviews to identify areas for improvement.
-      </li>
-      <li>
         Prioritize feature development: Analyze feedback and prioritize features
         based on user needs and business goals.
-      </li>
-      <li>
         Enhance UI/UX: Refine the user interface based on feedback, improving
         navigation and visual design.
-      </li>
-      <li>
         Integrate advanced features: Add more complex functionalities as needed
         (e.g., push notifications, social logins, in-app purchases).
-      </li>
-      <li>
         Performance optimization: Improve app loading times and overall
         performance.
-      </li>
-    </ol>
+        </div>
+        <div style="margin: 10px; border: 2px dashed black;background-color: #6F4E37; color:black ; color: white;">
     <h2>Year 3: Scalability and Advanced Functionality</h2>
-    <ol>
-        <li>Cloud integration:
-            Utilize cloud services (e.g., AWS, Azure) to scale your app and handle increased user traffic.</li>
-            <li>Data analytics:
-                Implement data tracking to analyze user behavior and gain insights for further optimization. </li>
-                <li>Security enhancements:
-                    Strengthen data security measures to protect user information</li>
-                    <li>Consider cross-platform development:
-                        Explore options to develop for multiple platforms with frameworks like Flutter or React Native if needed. </li>
-                        <li>Advanced features development:
-                            Implement complex features based on your app's specific needs (e.g., AI integrations, machine learning). </li>
-    </ol>
+    Cloud integration:
+      Utilize cloud services (e.g., AWS, Azure) to scale your app and handle increased user traffic.
+            Data analytics:
+                Implement data tracking to analyze user behavior and gain insights for further optimization.
+                Security enhancements:
+                    Strengthen data security measures to protect user information
+                    Consider cross-platform development:
+                        Explore options to develop for multiple platforms with frameworks like Flutter or React Native if needed.
+                        Advanced features development:
+                            Implement complex features based on your app's specific needs (e.g., AI integrations, machine learning).
+    </div>
+    <div style="margin: 10px; border: 2px dashed black; color: white;">
     <h2>Year 4: Market Expansion and Maintenance</h2>
-    <ol>
-        <li>Marketing and user acquisition: Implement strategies to reach your target audience and acquire new users. </li>
-        <li>App store optimization (ASO): Optimize app listings on app stores to improve discoverability.</li>
-        <li>Continuous updates and bug fixes: Regularly release updates to address user feedback, fix bugs, and add new features. </li>
-        <li>Monitor industry trends: Stay updated on emerging technologies and adapt your app accordingly. </li>
-        <li>Community building: Engage with users through support channels and foster a positive community around your app. </li>
-    </ol>
+        Marketing and user acquisition: Implement strategies to reach your target audience and acquire new users. 
+        App store optimization (ASO): Optimize app listings on app stores to improve discoverability.
+        Continuous updates and bug fixes: Regularly release updates to address user feedback, fix bugs, and add new features. 
+        Monitor industry trends: Stay updated on emerging technologies and adapt your app accordingly. 
+        Community building: Engage with users through support channels and foster a positive community around your app. 
+        </div>
+    <div style="margin: 10px; border: 2px dashed black;background-color: #6F4E37; color:black ; color: white;">
     <h3>Important Considerations:</h3>
-    <ol>
-        <li>Flexibility:
-            Be prepared to adjust your roadmap based on market feedback and changing technology landscapes</li>
-            <li>Team composition:
-                Build a team with diverse skill sets including developers, designers, testers, and product managers. </li>
-                <li>Project management:
-                    Utilize effective project management tools to track progress and meet deadlines. </li>
-    </ol>
+  
+        Flexibility:
+            Be prepared to adjust your roadmap based on market feedback and changing technology landscapes
+            Team composition:
+                Build a team with diverse skill sets including developers, designers, testers, and product managers. 
+                Project management:
+                    Utilize effective project management tools to track progress and meet deadlines. 
+                    </div>
   </body>
 </html>
