--- a/PSubIndex2_6.html
+++ b/PSubIndex2_6.html
@@ -10,10 +10,31 @@
     margin: 0;
     padding: 0;
   }
+  .buttonsbody{
+    display: flex;
+    flex-direction: row;
+    padding: 15px;
+    background-color:#708090;
+    justify-content: center;
+}
+.button{
+  padding:5px;
+  margin-left: 5px;
+  margin-right: 5px;
+        }
 </style>
-  <body style="background-color: #C9E4CA;">
-    <h1 align="center" style="background-color: #8F9491;">4 Year Roadmap for Software Development</h1>
-    <p>
+  <body style="background-color: #848884;">
+    <h1 align="center" style= "background-color: #848884; padding: 10px; color: white;">4 Year Roadmap for Software Development</h1>
+    <div class="buttonsbody">
+      <a href="index.html"><button class="button"  style="background-color: #A9A9A9; color:black ;border-radius:10px;">Home</button></a>
+      <a href="PSubIndex2_2.html"><button class="button"  style="background-color: #A9A9A9; color:black; border-radius:10px;">Roadmap</button></a>
+      <a href="PSubIndex2_1.html"><button class="button" style="background-color:#A9A9A9; color:black; border-radius:10px;">AI/ML</button></a>
+      <a href="PSubIndex2_2.html"><button class="button" style="background-color: #A9A9A9;color:black; border-radius:10px;">Cybersecurity</button></a>
+      <a href="PSubIndex2_5.html"><button class="button" style="background-color: #A9A9A9; color:black; border-radius:10px;">App Development</button></a>
+      <a href="PSubIndex2_4.html"><button class="button" style="background-color:#A9A9A9; color:black; border-radius:10px;">Freelancing</button></a>
+      <a href="PSubIndex2_3.html"><button class="button" style="background-color:#A9A9A9;color:black; border-radius:10px;">Data Analyst</button></a>
+  </div>
+  <p style="margin: 10px; text-align: center; border: 2px solid black; color: white;">
       A 4-year software development roadmap could include: Year 1: Foundational
       Skills and Project Experience, Year 2: Deepening Expertise and
       Specialization, Year 3: Leadership and Complex Project Management, Year 4:
@@ -22,118 +43,73 @@
       taking on more leadership responsibilities within a chosen specialization
       area.
     </p>
+    <div style="margin: 10px; border: 2px dashed black;background-color: #d3d3d3; color:black">
     <h2>Year 1: Foundational Skills and Project Experience</h2>
-    <ol>
-      <li>
         Core Programming Languages: Mastering a primary programming language
         like Python, Java, JavaScript depending on your desired career path.
-      </li>
-      <li>
         Data Structures and Algorithms: Understanding fundamental data
         structures (arrays, linked lists, trees) and algorithms (sorting,
         searching) to solve problems efficiently.
-      </li>
-      <li>
         Front-End Development (if applicable): HTML, CSS, JavaScript frameworks
         (React, Angular, Vue) for building user interfaces.
-      </li>
-      <li>
         Back-End Development (if applicable): Database technologies (SQL,
         NoSQL), API design, backend frameworks (Node.js, Django, Spring Boot).
-      </li>
-      <li>Version Control: Git for managing code changes and collaboration.</li>
-      <li>
+        Version Control: Git for managing code changes and collaboration.
         Project Development: Building small to medium-sized personal projects to
         apply learned concepts and showcase your skills.
-      </li>
-    </ol>
+        </div>
+        <div style="margin: 10px; border: 2px dashed black; color: white;">
     <h2>Year 2: Deepening Expertise and Specialization</h2>
-    <ol>
-      <li>
         Advanced Concepts: Diving deeper into advanced programming concepts like
         object-oriented programming, design patterns, concurrency, and
         asynchronous programming.
-      </li>
-      <li>
         Specific Technology Stack: Focusing on a particular technology stack
         within your chosen domain (e.g., cloud computing with AWS, machine
         learning with TensorFlow).
-      </li>
-      <li>
         Software Design Principles: Understanding SOLID principles,
         microservices architecture, and clean code practices.
-      </li>
-      <li>
         Testing and Debugging: Gaining proficiency in unit testing, integration
         testing, and debugging techniques.
-      </li>
-      <li>
         Contribution to Open Source: Contributing to open-source projects to
         gain real-world experience and collaborate with other developers.
-      </li>
-    </ol>
+        </div>
+        <div style="margin: 10px; border: 2px dashed black;background-color: #d3d3d3; color:black">
     <h2>Year 3: Leadership and Complex Project Management</h2>
-    <ol>
-      <li>
         Team Collaboration: Leading small development teams, managing project
         timelines, and facilitating effective communication.
-      </li>
-      <li>
         Agile Methodologies: Implementing Agile practices like Scrum and Kanban
         to manage iterative development cycles.
-      </li>
-      <li>
         System Architecture Design: Designing complex software systems,
         considering scalability, performance, and security aspects.
-      </li>
-      <li>
         Performance Optimization: Techniques to optimize code for speed and
         efficiency.
-      </li>
-      <li>Mentorship: Providing guidance and support to junior developers.</li>
-    </ol>
+     Mentorship: Providing guidance and support to junior developers.
+  </div>
+  <div style="margin: 10px; border: 2px dashed black; color: white;">
     <h2>Year 4: Advanced Technical Skills and Industry Impact</h2>
-    <ol>
-      <li>
         Emerging Technologies: Exploring and adopting new technologies like
         blockchain, AI, AR/VR as they mature.
-      </li>
-      <li>
         DevOps Practices: Integrating DevOps principles like continuous
         integration, continuous delivery (CI/CD) into your workflow.
-      </li>
-      <li>
         Security Best Practices: Implementing robust security measures to
         protect user data and applications.
-      </li>
-      <li>
         Industry-Specific Knowledge: Deepening your understanding of
         domain-specific requirements within your chosen industry (e.g.,
         healthcare, finance).
-      </li>
-      <li>
         Technical Leadership: Taking on technical leadership roles, driving
         architecture decisions and technical strategy.
-      </li>
-    </ol>
+        </div>
+    <div style="margin: 10px; border: 2px dashed black;background-color: #d3d3d3 ; color:black">
     <h3>Important Considerations:</h3>
-    <ol>
-      <li>
         Continuous Learning: Regularly update your skills by attending
         workshops, online courses, and following industry trends.
-      </li>
-      <li>
         Networking: Build connections within the tech community to learn from
         others and explore career opportunities.
-      </li>
-      <li>
         Portfolio Building: Showcase your best projects through a personal
         website or online portfolio.
-      </li>
-      <li>
         Adaptability: Be prepared to learn new technologies and adapt to
         evolving industry standards.
-      </li>
-    </ol>
+      </div>
+    
   </body>
 </html>
