--- a/PIndex2.html
+++ b/PIndex2.html
@@ -23,46 +23,58 @@
         padding: 5px; 
         border-radius: 20px;
     }
+    .buttonsbody{
+            display: flex;
+            flex-direction: row;
+            padding: 15px;
+            background-color:skyblue;
+            justify-content: center;
+        }
+        .button{
+            padding:5px;
+            margin-left: 5px;
+            margin-right: 5px;
+        }
     *{
         margin: 0;
         padding: 0;
     }
+    .downbutton{
+        display: flex;
+        flex-direction: row;
+       }
     </style>
 </head>
 <body>
-    <h1 align="center" style="background-color: #BCA3AC; padding: 10px; margin-bottom: 6px;">Roadmaps</h1>
-
-    <p style="margin: 15px"><b>A roadmap is crucial because it acts as a visual representation of a project's goals, timeline, and milestones, ensuring everyone involved understands the overall vision, priorities, and steps
+    <h1 align="center" style="background-color: #316970; padding: 10px; color: white;">Year Wise Plans</h1>
+    <div class="buttonsbody">
+        <a href="index.html"><button class="button"  style="background-color:#007bff; color:white; border-radius:10px;">Home</button></a>
+        <a href="Mcp.html"><button class="button" style="background-color:#007bff; color:white; border-radius:10px;">Career paths</button></a>
+        <a href="GJMT.html"><button class="button" style="background-color: #007bff;color:white; border-radius:10px;">Job Market Trends</button></a>
+        <a href="Mpk.html"><button class="button" style="background-color: #007bff; color:white; border-radius:10px;">Practical Knowledge</button></a>
+        <a href="Ysdg.html"><button class="button" style="background-color:#007bff; color:white; border-radius:10px;">SDG integration</button></a>
+        <a href="gctafs.html"><button class="button" style="background-color:#007bff; color:white; border-radius:10px;">Call-to-Action</button></a>
+        <a href="Yind.html"><button class="button" style="background-color: #007bff; color:white; border-radius:10px;">Inclusive Design</button></a>
+        <a href="Pindex1.html"><button class="button" style="background-color: #007bff; color:white; border-radius:10px;">Industry Expert Insights</button></a>
+    </div>
+    <p style="margin: 15px; border: 2px solid black; text-align: center; "><b>A roadmap is crucial because it acts as a visual representation of a project's goals, timeline, and milestones, ensuring everyone involved understands the overall vision, priorities, and steps
          needed to reach the desired outcome, facilitating clear communication, alignment among stakeholders, and effective project execution by identifying potential risks and dependencies early on while allowing for
           flexibility to adapt to changing circumstances; essentially, it provides a structured plan to guide the team towards achieving their objectives.</b></p>
-  <div>
+
+    <div style="margin-top: 30px; margin-bottom: 10px;">
         <img src="roadmap.jpg" align="center" class="roadmap" >
         <div>
-            <a href="PSubIndex2_1.html">
-    <button class="button1">AI/Machine Learning</button>
-</a>
-<a href="PSubIndex2_2.html">
-    <button class="button2">Cybersecurity</button>
-</a>
+        <a href="PSubIndex2_1.html"><button  class="button1">AI/Machine Learning</button></a>
+        <a href="PSubIndex2_2.html"><button class="button2">cybersecurity</button></a>
         </div>
         <div>
-            <a href="PSubIndex2_3.html">
-    
-            <button  style="margin-left:175px; margin-top: 210px; background-color: skyblue; padding: 5px; border-radius: 20px;">Data Analyst</button>
-        </a>
-            <a href="PSubIndex2_4.html">
-
-            <button  style="margin-left:750px ; margin-top: 210px; background-color: red; padding: 5px; border-radius: 20px;">Freelancing</button>
-            </a>
+        <a href="PSubIndex2_3.html"><button style="margin-left:175px; margin-top: 210px; background-color: skyblue; padding: 5px; border-radius: 20px;">Data Analyst</button></a>
+        <a href="PSubIndex2_4.html"><button style="margin-left:750px ; margin-top: 210px; background-color: red; padding: 5px; border-radius: 20px;">Freelancing</button></a>
         </div>
-        <div> 
-            <a href="PSubIndex2_5.html">
-            <button style="margin-top: 53px; margin-left: 580px;  background-color: gray; padding: 5px; border-radius: 20px;">App development</button>
-            </a>
+        <div class="downbutton"> 
+        <a href="PSubIndex2_5.html"><button style="margin-top: 45px; margin-left: 480px;  background-color: gray; padding: 5px; border-radius: 20px;">Application development</button></a>
+        <a href="PSubIndex2_6.html"><button style="margin-top: 45px;background-color: gray; padding: 5px; border-radius: 20px;">Software development</button></a>
     </div>
-  </div>
-    
-
 
 </body>
 </html>     
