--- a/Transformative_Quadrannial.html
+++ b/Transformative_Quadrannial.html
@@ -10,7 +10,6 @@
         .image{
             display:flex;
             flex-direction: row;
-
         }
     </style>
 </head>
@@ -24,6 +23,53 @@
     <img src="timemeanage.jpg" height="230px" width="230px">
     <img src="studyeffective1.jpg" height="230px" >
     <a href="index.html" style="background-color:#364958; color: white; padding: 90px;">HOME</a>
+    </div>
+    <h1 align="center" style="margin-top: 20px; margin-bottom: 10px; font-size: 35px;">Recommended Free course platforms to gain knowledge</h1>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+    <a href="https://nptel.ac.in/courses" style="color: white; font-size: 30px;"> National Programme on Technology Enhanced Learning (NPTEL) : IITS, IISc</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://swayam.gov.in/explorer" style="color: white; font-size: 30px;"> SWAYAM : Free Online Education By govt India</a>
+        </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://ocw.mit.edu/search/?s=department_course_numbers.sort_coursenum" style="color: white; font-size: 30px;"> MIT OpenCourseWare(OCW) : The Massachusetts Institute Of Technology</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://pll.harvard.edu/catalog" style="color: white; font-size: 30px;"> Harward University Free Courses</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://www.freecodecamp.org/news/tag/online-courses/" style="color: white; font-size: 30px;"> FreeCodeCamp : Self paced curriculum involving interactive coding Challenges</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://www.coursera.org/courses?query=free" style="color: white; font-size: 30px;"> Coursera : CIn colloberation with top universities and Organizations</a>
+    </div>
+    <h1 align="center" style="margin-top: 20px; margin-bottom: 10px; font-size: 35px;">Recommended platforms for Programming Practice</h1>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://leetcode.com/" style="color: white; font-size: 30px;">LEETCODE</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://www.codechef.com/" style="color: white; font-size: 30px;"> CODECHEF</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://www.hackerrank.com/" style="color: white; font-size: 30px;"> HACKERRANK</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://www.geeksforgeeks.org/" style="color: white; font-size: 30px;"> GEEKS FOR GEEKS</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://codeforces.com/" style="color: white; font-size: 30px;"> CODEFORCES</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://coderbyte.com/" style="color: white; font-size: 30px;"> CODERBYTE</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://exercism.org/" style="color: white; font-size: 30px;"> EXERCISM</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://projecteuler.net/" style="color: white; font-size: 30px;"> PROJECT EULER</a>
+    </div>
+    <div style="margin: 10px; padding: 15px; background-color: black; " align="center"  >
+        <a href="https://www.topcoder.com/" style="color: white; font-size: 30px;"> TOP CODER</a>
     </div>
     <footer style="background-color: #364958; color: white;" align="center">
         2025 : Transformative Quadrenial
