--- a/Pindex1.html
+++ b/Pindex1.html
@@ -4,13 +4,67 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>P</title>
-    <link rel="stylesheet" href="style.css">
+    <style>
+      *{
+        margin: 0;
+        padding: 0;
+      }
+      .buttonsbody{
+            display: flex;
+            flex-direction: row;
+            padding: 15px;
+            background-color:skyblue;
+            justify-content: center;
+        }
+        .button{
+            padding:5px;
+            margin-left: 5px;
+            margin-right: 5px;
+        }
+        
+body {
+    background-color: #C9E4CA;
+    color: #333;
+    margin: 0;
+    padding: 0;
+  }
+  h1 {
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 2px;
+    padding: 20px;
+    background-color: #007bff;
+    color:white;
+  }
+  h2 {
+    font-size: 20px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: #007bff;
+  }
+  h3 {
+    font-size: 15px;
+    font-weight: 500;
+    margin-top: 5px;
+    margin-bottom:5px;
+    color: #6c757d;
+  }
+    </style>
   </head>
   <body >
     <header><h1 align="center">Industry Expert Insights</h1></header>
-    
-    <hr >
-    <p>
+    <div class="buttonsbody">
+      <a href="index.html"><button class="button"  style="background-color:#007bff; color:white; border-radius:10px;">Home</button></a>
+      <a href="Mcp.html"><button class="button" style="background-color:#007bff; color:white; border-radius:10px;">Career paths</button></a>
+      <a href="GJMT.html"><button class="button" style="background-color: #007bff;color:white; border-radius:10px;">Job Market Trends</button></a>
+      <a href="Mpk.html"><button class="button" style="background-color: #007bff; color:white; border-radius:10px;">Practical Knowledge</button></a>
+      <a href="Ysdg.html"><button class="button" style="background-color:#007bff; color:white; border-radius:10px;">SDG integration</button></a>
+      <a href="gctafs.html"><button class="button" style="background-color:#007bff; color:white; border-radius:10px;">Call-to-Action</button></a>
+      <a href="Yind.html"><button class="button" style="background-color: #007bff; color:white; border-radius:10px;">Inclusive Design</button></a>
+      <a href="PIndex2.html"><button class="button" style="background-color: #007bff; color:white; border-radius:10px;">Year wise plans</button></a>
+  </div>
+    <p style="border: 2px solid black; margin: 5px;" align="center">
       Incorporating industry-specific insights into your career strategy can
       give you a competitive edge. By staying informed about the latest
       developments, emerging trends, and technological advancements in your
@@ -19,8 +73,9 @@
       commitment to professional growth, qualities that are highly valued in
       today's job market.
     </p>
-    <h2>1)AI & Data Science (ML Engineer, Data Scientist, AI Researcher)</h2>
-    <p>
+    <div style="margin:10px; border:5px dotted blue ; background-color: #89CFF0;">
+    <h2 style="margin:10px ; color:#00008B;" >1)AI & Data Science (ML Engineer, Data Scientist, AI Researcher)</h2>
+    <p style="margin:10px">
       According to industry experts, an AI/ML engineer needs a strong foundation
       in programming, mathematics, and data management, along with the ability
       to creatively solve problems, understand iterative processes, and develop
@@ -30,9 +85,9 @@
       cross-functional teams to build and deploy robust AI solutions across
       various industries.
     </p>
-    <h3>Key insights from industry experts about AI/ML engineering:</h3>
-    <ol>
-      <li>
+    <h3 style="margin:10px">Key insights from industry experts about AI/ML engineering:</h3>
+    <ol style="margin:25px" >
+      <li >
         Technical skills are crucial: Strong programming skills, especially in
         Python, are essential for implementing machine learning algorithms and
         building AI systems.
@@ -85,9 +140,10 @@
         </li>
       </ol>
     </ol>
-
-    <h2>2)Quantum Computing (Quantum Developer, Researcher)</h2>
-    <p>
+    </div>
+    <div style="margin:10px; border:5px dotted blue ;">
+    <h2 style="margin:10px">2)Quantum Computing (Quantum Developer, Researcher)</h2>
+    <p style="margin:10px">
       According to industry experts in quantum computing, the field is currently
       in an early stage of development, with significant potential for
       revolutionizing various sectors like healthcare, finance, materials
@@ -99,8 +155,8 @@
       qubit technologies, and actively collaborating with industry partners to
       identify real-world use cases for quantum computing
     </p>
-    <h3>Key insights from quantum computing experts:</h3>
-    <ol>
+    <h3 style="margin:10px">Key insights from quantum computing experts:</h3>
+    <ol style="margin:25px">
       <li>
         Focus on near-term applications: While full-scale quantum computers are
         still under development, researchers are actively exploring
@@ -154,9 +210,10 @@
         </li>
       </ol>
     </ol>
-
-    <h2>3)Cybersecurity (Ethical Hacker, Security Analyst)</h2>
-    <p>
+  </div>
+  <div style="margin:10px; border:5px dotted blue ; background-color: #89CFF0;">
+    <h2 style="margin:10px; color:#00008B">3)Cybersecurity (Ethical Hacker, Security Analyst)</h2>
+    <p style="margin:10px">
       According to industry experts, the most critical aspects of cybersecurity
       for ethical hackers and security analysts include: a strong understanding
       of networking and system administration, proficiency in identifying and
@@ -167,8 +224,8 @@
       automation and AI-powered security solutions to combat the increasing
       complexity of the cyber landscape.
     </p>
-    <h3>Key insights from experts:</h3>
-    <ol>
+    <h3 style="margin:10px">Key insights from experts:</h3>
+    <ol style="margin:25px">
       <li>
         Technical Skills:
         <ul>
@@ -256,8 +313,10 @@
         </li>
       </ul>
     </ol>
-    <h2>4)Robotics</h2>
-    <p>
+    </div>
+    <div style="margin:10px; border:5px dotted blue ; ">
+    <h2 style="margin:10px">4)Robotics</h2>
+    <p style="margin:10px">
       According to industry experts, students interested in robotics should
       focus on developing a strong foundation in computer science, mechanical
       engineering, and electrical engineering, as the field is rapidly evolving
@@ -267,8 +326,8 @@
       understanding the ethical implications of robotics and the potential
       impact on the workforce is crucial for responsible development.
     </p>
-    <h3>Key insights from industry experts for robotics students:</h3>
-    <ol>
+    <h3 style="margin:10px">Key insights from industry experts for robotics students:</h3>
+    <ol style="margin:25px">
       <li>
         Focus on fundamentals: Master core concepts in programming, mechanics,
         electronics, and mathematics to build a solid base for advanced robotics
@@ -318,8 +377,10 @@
         underwater exploration, and hazardous environments.
       </li>
     </ol>
-    <h2>5)Software Development</h2>
-    <p>
+    </div>
+    <div style="margin:10px; border:5px dotted blue ; background-color: #89CFF0;">
+    <h2 style="margin:10px">5)Software Development</h2>
+    <p style="margin:10px">
       According to industry experts, key insights in software development
       currently include: a growing emphasis on AI and machine learning
       integration, the rise of low-code/no-code platforms for faster
@@ -331,8 +392,8 @@
       manufacturing experiencing significant digital transformation driven by
       software development advancements.
     </p>
-    <h3>Key points from experts:</h3>
-    <ol>
+    <h3 style="margin:10px">Key points from experts:</h3>
+    <ol style="margin:25px">
       <li>
         Emerging technologies: AI, Machine Learning, Blockchain, Augmented
         Reality (AR), and Virtual Reality (VR) are rapidly impacting software
@@ -389,8 +450,10 @@
         </li>
       </ul>
     </ol>
-    <h2>6)Freelancing</h2>
-    <p>
+    </div>
+    <div style="margin:10px; border:5px dotted blue ;">
+    <h2 style="margin:10px">6)Freelancing</h2>
+    <p style="margin:10px">
       According to industry experts, successful freelancing hinges on clearly
       defining your niche, building a strong portfolio, actively networking,
       setting competitive rates, maintaining excellent communication with
@@ -399,9 +462,9 @@
       project management, timely delivery, and consistently delivering
       high-quality work to foster repeat business and positive client referrals.
     </p>
-    <h3>Key insights from industry experts on freelancing:</h3>
+    <h3 style="margin:10px" >Key insights from industry experts on freelancing:</h3>
 
-    <ol>
+    <ol style="margin:25px">
       <li>
         Specialization is key: Identifying a specific niche within your field
         allows you to stand out from competitors and attract clients seeking
@@ -442,7 +505,7 @@
         Project management tools: Utilize project management tools to stay
         organized, track progress, and meet deadlines effectively.
       </li>
-      <h3>Emerging trends in the freelance market:</h3>
+      <h3 style="margin:10px">Emerging trends in the freelance market:</h3>
       <ul>
         <li>
           Rise of niche platforms: Specialized freelance platforms catering to
@@ -463,7 +526,7 @@
         </li>
       </ul>
     </ol>
-    <hr>
-    <footer align="center"><p>© Copyright</p></footer>
+    </div>
+    <footer align="center" style="padding: 10px;background-color: skyblue;"><p>© Transformative Quadranial : 2025</p></footer>
   </body>
 </html>
