--- a/gctafs.html
+++ b/gctafs.html
@@ -35,8 +35,7 @@
             display: flex;
             flex-direction: row;
             padding: 15px;
-            background-color: rgb(181, 125, 189);
-            width: 100%;
+            background-color: #364958;;
             justify-content: center;
         }
         .button{
@@ -59,6 +58,16 @@
     <div class="quotes" style="border: 2px solid black ; background-color:#3B6064;">
         <p style="color:yellow; font-size: 20px ; padding:10px;"  >If you want to sucide, sucide the thought not yourself</p>
         <p style="color:yellow; font-size: 20px ; padding:10px;"  >Engineering is achieving function while avoiding failure</p>
+    </div>
+    <div class="buttonsbody">
+        <a href="index.html"><button class="button"  style="background-color: #3B6064; color:yellow; border-radius:10px;">Home</button></a>
+        <a href="Mcp.html"><button class="button" style="background-color:#3B6064; color:yellow; border-radius:10px;">Career paths</button></a>
+        <a href="Pindex1.html"><button class="button" style="background-color: #3B6064;color:yellow; border-radius:10px;"> Industry Expert Insignts</button></a>
+        <a href="Mpk.html"><button class="button" style="background-color: #3B6064; color:yellow; border-radius:10px;">Practical Knowledge</button></a>
+        <a href="Ysdg.html"><button class="button" style="background-color:#3B6064; color:yellow; border-radius:10px;">SDG integration</button></a>
+        <a href="GJMT.html"><button class="button" style="background-color:#3B6064; color:yellow; border-radius:10px;">Job Market Trends</button></a>
+        <a href="Yind.html"><button class="button" style="background-color: #3B6064; color:yellow; border-radius:10px;">Inclusive Design</button></a>
+        <a href="PIndex2.html"><button class="button" style="background-color: #3B6064; color:yellow; border-radius:10px;">Year wise plans</button></a>
     </div>
     <body style="background-color:#55828B;">
     <div class="video">
