--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="icon" type="image/png" href="TQ.png">
+
         <Title>Transformative Quadrenial</Title>
         <style>
           *{
