--- a/MULTIPAGES.html
+++ b/MULTIPAGES.html
@@ -73,7 +73,7 @@
  
   <div class="iframe-container">
 
-    <iframe src="/Users/yasaswinimaddineni/Desktop/AV.SC.U4AIE24258/LEFT2.HTML" name="left" style="width:25%"></iframe>
+    <iframe src="LEFT2.HTML" name="left" style="width:25%"></iframe>
     <iframe src="/Users/yasaswinimaddineni/Desktop/AV.SC.U4AIE24258/right.html" name="right" style="width:75%" ></iframe>
 
       </div>
