--- a/MULTIPAGES.html
+++ b/MULTIPAGES.html
@@ -74,7 +74,7 @@
   <div class="iframe-container">
 
     <iframe src="LEFT2.HTML" name="left" style="width:25%"></iframe>
-    <iframe src="/Users/yasaswinimaddineni/Desktop/AV.SC.U4AIE24258/right.html" name="right" style="width:75%" ></iframe>
+    <iframe src="right.html" name="right" style="width:75%" ></iframe>
 
       </div>
 
