--- a/LEFT2.HTML
+++ b/LEFT2.HTML
@@ -101,7 +101,7 @@
  
     <div>
 
-      <a href= "/Users/yasaswinimaddineni/Desktop/AV.SC.U4AIE24258/fei.html" target="right" ><img src="https://i.insider.com/5b59586da592a51b008b4644?width=700">  </img></a>
+      <a href= "fei.html" target="right" ><img src="https://i.insider.com/5b59586da592a51b008b4644?width=700">  </img></a>
 </div>
 
 
