--- a/LEFT2.HTML
+++ b/LEFT2.HTML
@@ -106,7 +106,7 @@
 
 
 <div>
-<a href="/Users/yasaswinimaddineni/Desktop/AV.SC.U4AIE24258/steve.html" target="right" ><img src="https://im.indiatimes.in/content/2022/Jan/cnet-steve-jobs_61d6a3888c73f.jpg?w=1200&h=900&cc=1&webp=1&q=75s"  ></img></a>
+<a href="steve.html" target="right" ><img src="https://im.indiatimes.in/content/2022/Jan/cnet-steve-jobs_61d6a3888c73f.jpg?w=1200&h=900&cc=1&webp=1&q=75s"  ></img></a>
 
  </div>
 
