--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="centerportion"> 
         <div>
         <div><a href="Mpk.html"><img src="emphasize_practical_knowledge.jpg" style="height: 150px ; width: 150px; margin-bottom: 15px; border:5px solid black; "></a></div>
-        <div> <a href=""><img src="inclusive_design.jpg" style="height: 150px ; width: 150px; margin-top: 15px; border:5px solid black; "></a></div>
+        <div> <a href="MULTIPAGES.html"><img src="inclusive_design.jpg" style="height: 150px ; width: 150px; margin-top: 15px; border:5px solid black; "></a></div>
         </div>
         <div class="center"><a href="Transformative_Quadrannial.html"><img src="weblogo1.jpg" style="height: 350px ; width: 350px; margin:5px; border:5px solid black; "></a></div>
         <div class="rightmiddle">
