--- a/fei.html
+++ b/fei.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Steve Jobs</title>
-    <link rel="stylesheet" href="/Users/yasaswinimaddineni/Desktop/AV.SC.U4AIE24258/pro.css">
+    <link rel="stylesheet" href="pro.css">
     
 </head>
 <body>
